--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mein Sommersemester 2025 </title>
 </head>
 <body>
-  <h1>Mein Sommersemester 2025 </h1>
+  <h1>"Mein Sommersemester 2025"</h1>
 </body>
 
 
