--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
   <h1>"Mein Sommersemester 2025"</h1>
+  <style>
+    h1 {
+      background-color: lightblue;  /* Setzt den Hintergrund der Überschrift auf Hellblau */
+    }
+  </style>
+  
 </body>
 
 
