--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Mein Sommersemester 2025 </title>
-</head>
-<body>
-  <h1>"Mein Sommersemester 2025"</h1>
-  <style>
+   <style>
     h1 {
       background-color: lightblue;  /* Setzt den Hintergrund der Überschrift auf Hellblau */
     }
   </style>
+</head>
+  
+<body>
+  <h1>Mein Sommersemester 2025</h1>
+ 
   
 </body>
 
