--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Mein Sommersemester 2025 </title>
+  <title>Mein Sommersemester 2025</title>
    <style>
     h1 {
       background-color: lightblue;  /* Setzt den Hintergrund der Überschrift auf Hellblau */
+      font-family: Arial, sans-serif;
+      text-align: center; 
     }
   </style>
 </head>
