--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   
 <body>
   <h1>Mein Sommersemester 2025</h1>
+  <style>
+    body {
+      background-color: lightblue;  /* Setzt den Hintergrund der gesamten Seite auf Hellblau */
+    }
+  </style>
  
   
 </body>
