--- a/index.html
+++ b/index.html
@@ -12,13 +12,51 @@
     body {
       background-color: lightblue;  /* Setzt den Hintergrund der gesamten Seite auf Hellblau */
     } 
+
+      /* Stil für den ersten Bereich */
+    #bereich1 {
+      background-color: lightblue;
+      padding: 20px;
+      margin-bottom: 20px;
+      font-family: Arial, sans-serif;
+    }
+
+    /* Stil für den zweiten Bereich */
+    #bereich2 {
+      background-color: lightgreen;
+      padding: 30px;
+      margin-bottom: 20px;
+      font-family: 'Courier New', Courier, monospace;
+      color: darkgreen;
+    }
+
+    /* Stil für den dritten Bereich */
+    #bereich3 {
+      background-color: lightcoral;
+      padding: 25px;
+      font-size: 18px;
+      font-family: 'Georgia', serif;
+    }
   </style>
 </head>
   
 <body>
   <h1>Mein Sommersemester 2025</h1>
   
- 
+   <div id="bereich1">
+    <h2>Bereich 1: Hellblaue Hintergrundfarbe</h2>
+    <p>Dieser Bereich hat einen hellblauen Hintergrund und einfache Schriftarten.</p>
+  </div>
+
+  <div id="bereich2">
+    <h2>Bereich 2: Hellgrüne Hintergrundfarbe</h2>
+    <p>Dieser Bereich hat einen hellgrünen Hintergrund und eine monospace-Schriftart.</p>
+  </div>
+
+  <div id="bereich3">
+    <h2>Bereich 3: Hellrote Hintergrundfarbe</h2>
+    <p>Dieser Bereich hat einen hellroten Hintergrund und eine serifen-Schriftart.</p>
+  </div>
   
 </body>
 
