--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <style>
     h1 {
       background-color: lightblue;  /* Setzt den Hintergrund der Überschrift auf Hellblau */
-      font-family: Arial, sans-serif;
+      font-family: 'Courier New', Courier, monospace;
       text-align: center; 
     } 
     body {
@@ -15,27 +15,29 @@
  
       /* Stil für den ersten Bereich */
     #bereich1 {
-      background-color: lightblue;
-      padding: 20px;
+      background-color: blue;
+      padding: 30px;
       margin-bottom: 20px;
-      font-family: Arial, sans-serif;
+      font-family: 'Courier New', Courier, monospace;
+      color: darkblue;
     }
 
     /* Stil für den zweiten Bereich */
     #bereich2 {
-      background-color: lightgreen;
+      background-color: blue;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: darkgreen;
+      color: darkblue;
     }
 
     /* Stil für den dritten Bereich */
     #bereich3 {
-      background-color: lightcoral;
-      padding: 25px;
-      font-size: 18px;
-      font-family: 'Georgia', serif;
+      background-color: blue;
+      padding: 30px;
+      margin-bottom: 20px;
+      font-family: 'Courier New', Courier, monospace;
+      color: darkblue;
     }
   </style>
 </head>
