--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <title>Mein Sommersemester 2025</title>
    <style>
     h1 {
-      background-color: lightblue;  /* Setzt den Hintergrund der Überschrift auf Hellblau */
+      background-color: #00A9DA;  
       font-family: 'Courier New', Courier, monospace;
       text-align: center; 
     } 
     body {
-      background-color: lightblue;  /* Setzt den Hintergrund der gesamten Seite auf Hellblau */
+      background-color: #00A9DA;  
     } 
  
       /* Stil für den ersten Bereich */
     #bereich1 {
-      background-color: blue;
+      background-color: lightblue;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -24,7 +24,7 @@
 
     /* Stil für den zweiten Bereich */
     #bereich2 {
-      background-color: blue;
+      background-color: lightblue;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -33,7 +33,7 @@
 
     /* Stil für den dritten Bereich */
     #bereich3 {
-      background-color: blue;
+      background-color: lightblue;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -45,17 +45,17 @@
 <body>
   <h1>Mein Sommersemester 2025</h1>
   
-   <div id="bereich1">
+   <div id="Stundenplan">
     <h2>Bereich 1: Hellblaue Hintergrundfarbe</h2>
     <p>Dieser Bereich hat einen hellblauen Hintergrund und einfache Schriftarten.</p>
   </div>
 
-  <div id="bereich2">
+  <div id="Kurse">
     <h2>Bereich 2: Hellgrüne Hintergrundfarbe</h2>
     <p>Dieser Bereich hat einen hellgrünen Hintergrund und eine monospace-Schriftart.</p>
   </div>
 
-  <div id="bereich3">
+  <div id="Prüfungen">
     <h2>Bereich 3: Hellrote Hintergrundfarbe</h2>
     <p>Dieser Bereich hat einen hellroten Hintergrund und eine serifen-Schriftart.</p>
   </div>
