--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     } 
  
       /* Stil für den ersten Bereich */
-    #bereich1 {
+    #Stundenplan {
       background-color: lightblue;
       padding: 30px;
       margin-bottom: 20px;
@@ -23,7 +23,7 @@
     }
 
     /* Stil für den zweiten Bereich */
-    #bereich2 {
+    #Kurse {
       background-color: lightblue;
       padding: 30px;
       margin-bottom: 20px;
@@ -32,7 +32,7 @@
     }
 
     /* Stil für den dritten Bereich */
-    #bereich3 {
+    #Prüfungen {
       background-color: lightblue;
       padding: 30px;
       margin-bottom: 20px;
