--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
  
       /* Stil für den ersten Bereich */
     #Stundenplan {
-      background-color: lightblue;
+      background-color: #2FCDFA;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: darkblue;
+      color: #2FCDFA;
     }
 
     /* Stil für den zweiten Bereich */
     #Kurse {
-      background-color: lightblue;
+      background-color: #2FCDFA;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: darkblue;
+      color: #2FCDFA;
     }
 
     /* Stil für den dritten Bereich */
     #Prüfungen {
-      background-color: lightblue;
+      background-color: #2FCDFA;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: darkblue;
+      color: #2FCDFA;
     }
   </style>
 </head>
@@ -46,18 +46,18 @@
   <h1>Mein Sommersemester 2025</h1>
   
    <div id="Stundenplan">
-    <h2>Bereich 1: Hellblaue Hintergrundfarbe</h2>
-    <p>Dieser Bereich hat einen hellblauen Hintergrund und einfache Schriftarten.</p>
+    <h2>Stundenplan</h2>
+    <p>klicke hier.</p>
   </div>
 
   <div id="Kurse">
-    <h2>Bereich 2: Hellgrüne Hintergrundfarbe</h2>
-    <p>Dieser Bereich hat einen hellgrünen Hintergrund und eine monospace-Schriftart.</p>
+    <h2>Kurse</h2>
+    <p>klicke hier</p>
   </div>
 
   <div id="Prüfungen">
-    <h2>Bereich 3: Hellrote Hintergrundfarbe</h2>
-    <p>Dieser Bereich hat einen hellroten Hintergrund und eine serifen-Schriftart.</p>
+    <h2>Prüfungen</h2>
+    <p>klicke hier</p>
   </div>
   
 </body>
