--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: #2FCDFA;
+      color: #061018;
     }
 
     /* Stil für den zweiten Bereich */
@@ -28,7 +28,7 @@
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: #2FCDFA;
+      color: #061018;
     }
 
     /* Stil für den dritten Bereich */
@@ -37,7 +37,7 @@
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
-      color: #2FCDFA;
+      color: #061018;
     }
   </style>
 </head>
