--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       font-family: 'Courier New', Courier, monospace;
       text-align: center; 
     } 
+
+    h2 { 
+      font-family: 'Courier New', Courier, monospace;
+      text-align: center; 
+    }
     body {
       background-color: #00A9DA;  
     } 
@@ -47,7 +52,49 @@
   
    <div id="Stundenplan">
     <h2>Stundenplan</h2>
-    
+    <table>
+            <thead>
+                <tr>
+                    <th>Wochentag</th>
+                    <th>Kurs</th>
+                    <th>Uhrzeit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Montag</td>
+                    <td>Mathematik</td>
+                    <td>08:00 - 10:00</td>
+                </tr>
+                <tr>
+                    <td>Montag</td>
+                    <td>Informatik</td>
+                    <td>10:30 - 12:30</td>
+                </tr>
+                <tr>
+                    <td>Dienstag</td>
+                    <td>Wirtschaft</td>
+                    <td>08:00 - 10:00</td>
+                </tr>
+                <tr>
+                    <td>Mittwoch</td>
+                    <td>Programmieren</td>
+                    <td>10:30 - 12:30</td>
+                </tr>
+                <tr>
+                    <td>Donnerstag</td>
+                    <td>Statistik</td>
+                    <td>08:00 - 10:00</td>
+                </tr>
+                <tr>
+                    <td>Freitag</td>
+                    <td>Projektmanagement</td>
+                    <td>10:30 - 12:30</td>
+                </tr>
+            </tbody>
+        </table>
+
+     
   </div>
 
   <div id="Kurse">
