--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       font-family: 'Courier New', Courier, monospace;
       color: #061018;
     }
+
   </style>
 </head>
   
@@ -52,48 +53,36 @@
   
    <div id="Stundenplan">
     <h2>Stundenplan</h2>
-    <table>
-            <thead>
-                <tr>
-                    <th>Wochentag</th>
-                    <th>Kurs</th>
-                    <th>Uhrzeit</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Montag</td>
-                    <td>Mathematik</td>
-                    <td>08:00 - 10:00</td>
-                </tr>
-                <tr>
-                    <td>Montag</td>
-                    <td>Informatik</td>
-                    <td>10:30 - 12:30</td>
-                </tr>
-                <tr>
-                    <td>Dienstag</td>
-                    <td>Wirtschaft</td>
-                    <td>08:00 - 10:00</td>
-                </tr>
-                <tr>
-                    <td>Mittwoch</td>
-                    <td>Programmieren</td>
-                    <td>10:30 - 12:30</td>
-                </tr>
-                <tr>
-                    <td>Donnerstag</td>
-                    <td>Statistik</td>
-                    <td>08:00 - 10:00</td>
-                </tr>
-                <tr>
-                    <td>Freitag</td>
-                    <td>Projektmanagement</td>
-                    <td>10:30 - 12:30</td>
-                </tr>
-            </tbody>
-        </table>
-
+   <table border="1">
+  <tr>
+    <th>Zeit</th>
+    <th>Montag</th>
+    <th>Dienstag</th>
+    <th>Mittwoch</th>
+    <th>Donnerstag</th>
+  </tr>
+  <tr>
+    <td>08:15-09:45</td>
+    <td></td>
+    <td></td>
+    <td>Buchführung</td>
+    <td>Analysis</td>
+  </tr>
+  <tr>
+    <td>10:00 – 11:30</td>
+    <td>Grundlagen der Informatik</td>
+    <td>Statistik</td>
+    <td>Buchführung</td>
+    <td>Analysis</td>
+  </tr>
+  <tr>
+    <td>11:45 – 13:15</td>
+    <td>Grundlagen der Informatik</td>
+    <td>Statistik</td>
+    <td>Buchführung</td>
+    <td>Analysis</td>
+  </tr>
+</table>
      
   </div>
 
