--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
   
    <div id="Stundenplan">
     <h2>Stundenplan</h2>
-   <table border="1">
+   <table>
   <tr>
     <th>Zeit</th>
     <th>Montag</th>
     <th>Dienstag</th>
     <th>Mittwoch</th>
     <th>Donnerstag</th>
+    <th>Freitag</th>
   </tr>
   <tr>
     <td>08:15-09:45</td>
@@ -67,6 +68,7 @@
     <td></td>
     <td>Buchführung</td>
     <td>Analysis</td>
+    <td>Datenbanken</td>
   </tr>
   <tr>
     <td>10:00 – 11:30</td>
@@ -74,6 +76,7 @@
     <td>Statistik</td>
     <td>Buchführung</td>
     <td>Analysis</td>
+    <td>Datenbanken</td>
   </tr>
   <tr>
     <td>11:45 – 13:15</td>
@@ -81,6 +84,30 @@
     <td>Statistik</td>
     <td>Buchführung</td>
     <td>Analysis</td>
+  </tr>
+  <tr>
+    <td>14:15 – 15:45</td>
+    <td>Grundlagen der Informatik</td>
+    <td>Statistik</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+   <tr>
+    <td>16:00 – 17:30</td>
+    <td>Grundlagen der Informatik</td>
+    <td>Statistik</td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+   <tr>
+    <td>17:45 – 19:15</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
 </table>
      
