--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     body {
       background-color: #00A9DA;  
     } 
+
+    table {
+      border: 2px solid black;  /* Setzt einen schwarzen Rand für die gesamte Tabelle */
+      border-collapse: collapse; /* Verhindert doppelte Ränder zwischen Zellen */
+    }
  
       /* Stil für den ersten Bereich */
     #Stundenplan {
