--- a/index.html
+++ b/index.html
@@ -133,33 +133,33 @@ table {
   <h2>Kurse</h2>
   <h3>Grundlagen der Informatik</h3>
     <p>
-      Dozent:in: Prof. Dr.-Ing. Jöran Pieper
-      Pflichtmodul
-      Vorlesung in der Kategorie Lehre
+      Dozent:in: Prof. Dr.-Ing. Jöran Pieper\n
+      Pflichtmodul\n
+      Vorlesung in der Kategorie Lehre\n
     </p>
  <h3>Statistik</h3>
     <p>
-    Dozent:in: Prof. Dr. rer. pol. habil Manuela Möller
-    Pflichtmodul
-    Vorlesung in der Kategorie Lehre
+    Dozent:in: Prof. Dr. rer. pol. habil Manuela Möller\n
+    Pflichtmodul\n
+    Vorlesung in der Kategorie Lehre\n
     </p>
  <h3>Buchführung</h3>
     <p>
-    Dozent:in: Prof. Dr. rer. pol. Gerhard Müller, Monika Augustyniak
-    Pflichtmodul
-    Vorlesung in der Kategorie Lehre
+    Dozent:in: Prof. Dr. rer. pol. Gerhard Müller, Monika Augustyniak\n
+    Pflichtmodul\n
+    Vorlesung in der Kategorie Lehre\n
     </p>
  <h3>Analysis</h3>
     <p>
-    Dozent:in: Prof. Dr. oec. Petra Leitert
-    Pflichtmodul
-    Vorlesung in der Kategorie Lehre
+    Dozent:in: Prof. Dr. oec. Petra Leitert\n
+    Pflichtmodul\n
+    Vorlesung in der Kategorie Lehre\n
     </p>
  <h3>Datenbanken</h3>
     <p>
-    Dozent:in: Prof. Dr.-Ing. Antje Raab-Düsterhöft
-    Pflichtmodul
-    Vorlesung in der Kategorie Lehre 
+    Dozent:in: Prof. Dr.-Ing. Antje Raab-Düsterhöft\n
+    Pflichtmodul\n
+    Vorlesung in der Kategorie Lehre\n
     </p>  
   </div>
 
