--- a/index.html
+++ b/index.html
@@ -133,33 +133,33 @@ table {
   <h2>Kurse</h2>
   <h3>Grundlagen der Informatik</h3>
     <p>
-      Dozent:in: Prof. Dr.-Ing. Jöran Pieper\n
-      Pflichtmodul\n
-      Vorlesung in der Kategorie Lehre\n
+      Dozent:in: Prof. Dr.-Ing. Jöran Pieper<br>
+      Pflichtmodul<br>
+      Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Statistik</h3>
     <p>
-    Dozent:in: Prof. Dr. rer. pol. habil Manuela Möller\n
-    Pflichtmodul\n
-    Vorlesung in der Kategorie Lehre\n
+    Dozent:in: Prof. Dr. rer. pol. habil Manuela Möller<br>
+    Pflichtmodul<br>
+    Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Buchführung</h3>
     <p>
-    Dozent:in: Prof. Dr. rer. pol. Gerhard Müller, Monika Augustyniak\n
-    Pflichtmodul\n
-    Vorlesung in der Kategorie Lehre\n
+    Dozent:in: Prof. Dr. rer. pol. Gerhard Müller, Monika Augustyniak<br>
+    Pflichtmodul<br>
+    Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Analysis</h3>
     <p>
-    Dozent:in: Prof. Dr. oec. Petra Leitert\n
-    Pflichtmodul\n
-    Vorlesung in der Kategorie Lehre\n
+    Dozent:in: Prof. Dr. oec. Petra Leitert<br>
+    Pflichtmodul<br>
+    Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Datenbanken</h3>
     <p>
-    Dozent:in: Prof. Dr.-Ing. Antje Raab-Düsterhöft\n
-    Pflichtmodul\n
-    Vorlesung in der Kategorie Lehre\n
+    Dozent:in: Prof. Dr.-Ing. Antje Raab-Düsterhöft<br>
+    Pflichtmodul<br>
+    Vorlesung in der Kategorie Lehre<br>
     </p>  
   </div>
 
