--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ table {
   <h2>Kurse</h2>
   <h3>Grundlagen der Informatik</h3>
     <p>
-      Dozent:in: Prof. Dr.-Ing. Jöran Pieper<br>
+      <a href="https://www.fww.hs-wismar.de/fakultaet/personen-bereiche/professoren/prof-dr-ing-joeran-pieper/">Dozent:in: Prof. Dr.-Ing. Jöran Pieper</a> <br> 
       Pflichtmodul<br>
       Vorlesung in der Kategorie Lehre<br>
     </p>
