--- a/index.html
+++ b/index.html
@@ -139,25 +139,25 @@ table {
     </p>
  <h3>Statistik</h3>
     <p>
-    Dozent:in: Prof. Dr. rer. pol. habil Manuela Möller<br>
+    <a href="https://www.fww.hs-wismar.de/fakultaet/personen-bereiche/professoren/betriebswirtschaft/manuela-moeller/">Dozent:in: Prof. Dr. rer. pol. habil Manuela Möller</a> <br>
     Pflichtmodul<br>
     Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Buchführung</h3>
     <p>
-    Dozent:in: Prof. Dr. rer. pol. Gerhard Müller, Monika Augustyniak<br>
+    <a href="https://www.fww.hs-wismar.de/fakultaet/personen-bereiche/professoren/betriebswirtschaft/gerhard-mueller/">Dozent:in: Prof. Dr. rer. pol. Gerhard Müller, Monika Augustyniak</a> <br> 
     Pflichtmodul<br>
     Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Analysis</h3>
     <p>
-    Dozent:in: Prof. Dr. oec. Petra Leitert<br>
+    <a href="https://www.fww.hs-wismar.de/fakultaet/personen-bereiche/professoren/betriebswirtschaft/petra-leitert/">Dozent:in: Prof. Dr. oec. Petra Leitert</a> <br>
     Pflichtmodul<br>
     Vorlesung in der Kategorie Lehre<br>
     </p>
  <h3>Datenbanken</h3>
     <p>
-    Dozent:in: Prof. Dr.-Ing. Antje Raab-Düsterhöft<br>
+    <a href="https://fiw.hs-wismar.de/bereiche/eui/personen-gremien/professorinnen-professoren/prof-dr-ing-antje-raab-duesterhoeft/">Dozent:in: Prof. Dr.-Ing. Antje Raab-Düsterhöft</a> <br>
     Pflichtmodul<br>
     Vorlesung in der Kategorie Lehre<br>
     </p>  
