--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ table {
  
       /* Stil für den ersten Bereich */
     #Stundenplan {
-      background-color: #A9E3F2;
+      background-color: #FFFEFE;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -44,7 +44,7 @@ table {
 
     /* Stil für den zweiten Bereich */
     #Kurse {
-      background-color: #A9E3F2;
+      background-color: #FFFEFE;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -53,7 +53,7 @@ table {
 
     /* Stil für den dritten Bereich */
     #Prüfungen {
-      background-color: #A9E3F2;
+      background-color: #FFFEFE;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -164,8 +164,32 @@ table {
   </div>
 
   <div id="Prüfungen">
-    <h2>Prüfungen</h2>
-   
+  <h2>Prüfungen</h2>
+     <h3>Grundlagen der Informatik</h3>
+    <p>
+    Prüfungsleistung: APL
+    zeitlicher Umfang: Teil 1: 105 min, Teil 2: 180 min
+    </p>
+ <h3>Statistik</h3>
+    <p>
+    Prüfungsleistung: Klausur
+    zeitlicher Umfang: 120 min
+    </p>
+ <h3>Buchführung</h3>
+    <p>
+    Prüfungsleistung: Klausur
+    zeitlicher Umfang: 120 min
+    </p>
+ <h3>Analysis</h3>
+    <p>
+    Prüfungsleistung: Klausur
+    zeitlicher Umfang: 120 min
+    </p>
+ <h3>Datenbanken</h3>
+    <p>
+    Prüfungsleistung: Klausur
+    zeitlicher Umfang: 120 min
+    </p>
   </div>
   
 </body>
