--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ table {
  
       /* Stil für den ersten Bereich */
     #Stundenplan {
-      background-color: #FFFEFE;
+      background-color: #80DBF5;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -44,7 +44,7 @@ table {
 
     /* Stil für den zweiten Bereich */
     #Kurse {
-      background-color: #FFFEFE;
+      background-color: #80DBF5;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -53,7 +53,7 @@ table {
 
     /* Stil für den dritten Bereich */
     #Prüfungen {
-      background-color: #FFFEFE;
+      background-color: #80DBF5;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
