--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mein Sommersemester 2025</title>
    <style>
     h1 {
-      background-color: #00A9DA;  
+      background-color: #0A2160;  
       font-family: 'Courier New', Courier, monospace;
       text-align: center; 
     } 
@@ -20,7 +20,7 @@
     }
      
     body {
-      background-color: #00A9DA;  
+      background-color: #0A2160;  
     } 
      
 table {
@@ -167,13 +167,13 @@ table {
   <h2>Prüfungen</h2>
      <h3>Grundlagen der Informatik</h3>
     <p>
-    Prüfungsleistung: APL
-    zeitlicher Umfang: Teil 1: 105 min, Teil 2: 180 min
+    Prüfungsleistung: Klausur
+    zeitlicher Umfang: 120 min
     </p>
  <h3>Statistik</h3>
     <p>
-    Prüfungsleistung: Klausur
-    zeitlicher Umfang: 120 min
+    Prüfungsleistung: APL
+    zeitlicher Umfang: Teil 1: 105 min, Teil 2: 180 min
     </p>
  <h3>Buchführung</h3>
     <p>
