--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mein Sommersemester 2025</title>
    <style>
     h1 {
-      background-color: #0A2160;  
+      background-color: #00A9DA;  
       font-family: 'Courier New', Courier, monospace;
       text-align: center; 
     } 
@@ -20,7 +20,7 @@
     }
      
     body {
-      background-color: #0A2160;  
+      background-color: #00A9DA;  
     } 
      
 table {
@@ -35,7 +35,7 @@ table {
  
       /* Stil für den ersten Bereich */
     #Stundenplan {
-      background-color: #80DBF5;
+      background-color: #CFEDF5;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -44,7 +44,7 @@ table {
 
     /* Stil für den zweiten Bereich */
     #Kurse {
-      background-color: #80DBF5;
+      background-color: #CFEDF5;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
@@ -53,7 +53,7 @@ table {
 
     /* Stil für den dritten Bereich */
     #Prüfungen {
-      background-color: #80DBF5;
+      background-color: #CFEDF5;
       padding: 30px;
       margin-bottom: 20px;
       font-family: 'Courier New', Courier, monospace;
